name:                geek-calendar
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/HaPyTeX/geek-calendar#readme
license:             BSD3
license-file:        LICENSE
author:              Willem Van Onsem
maintainer:          hapytexeu+gh@gmail.com
copyright:           2020 Willem Van Onsem
category:            utils
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable geek-calendar
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:
      Geek.Data
    , Geek.Parsing
  default-language:    Haskell2010
  build-depends:
      base >=4.7 && <5
    , blaze-html
    , blaze-markup
    , bytestring >=0.9
    , containers
    , data-default-class >=0.0.1
    , directory >=1.3
    , filepath >=1.0
    , HaTeX >=3.20
    , iCalendar
    , markdown
    , network-uri >=2.6.3
    , split >=0.1
    , time >=1.9
    , text >=1.2.4
